# goit-pycore-final

./: .gitignore  README.md  REQUIREMENTS.md  conversation.txt  create_database.py  main.py  mcp.py  pyproject.toml  quicktest.py  requirement.txt  requirements.txt
.github/workflows/: build-wheel.yml  deploy-app.yml  deploy-backend.yml  deploy-frontend.yml  main_magic-8.yml
api/: chat_endpoints.py  contact_endpoints.py  endpoints.py  mappers.py  models.py  notes_endpoints.py
cli/: abstractions.py  birthday_commands.py  completion.py  contact_commands.py  database.py  email_commands.py  main_loop.py  messages.py  note_commands.py  phone_commands.py  pipeline.py
data/: abstractions.py  contact_commands.py  contact_queries.py  database.py  email_commands.py  email_queries.py  exceptions.py  models.py  note_commands.py  note_queries.py  phone_commands.py  phone_queries.py  tag_commands.py  validation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: api.ts
frontend/src/commands/: chat.ts  commandProcessor.ts  help.md  help.ts
frontend/src/commands/contacts/: addContact.ts  deleteContact.ts  getContacts.ts  updateContact.ts
frontend/src/commands/phones/: updatePhone.ts
frontend/src/components/Buttons/: AddButton.tsx  EditButton.tsx
frontend/src/components/Chat/: Chat.tsx  FloatingIcons.css  FloatingIcons.tsx
frontend/src/components/Inputs/: EditInput.tsx  (+1 more)
llm/: chat.py  tools.py
tests/: test_contact_commands.py  test_email_commands.py  test_phone_commands.py  test_validation.py
(+6 files in other folders)
