[project]
name = "goit-pycore-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "fastapi[standard]>=0.120.4",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
app = "api.endpoints:app"

[tool.basedpyright]
reportCallInDefaultInitializer = false

[tool.pytest.ini_options]
pythonpath = ["."]
