[project]
name = "magic8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.73.0",
    "colorama>=0.4.6",
    "fastapi[standard]>=0.120.4",
    "fastmcp==2.13.0.2",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
magic8 = "main:main"

[tool.basedpyright]
reportCallInDefaultInitializer = false

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "cli", "llm", "data"]
py-modules = ["main"]
